import pytest
from sqlalchemy import update
from sqlalchemy.exc import IntegrityError
from sqlalchemy.ext.asyncio import AsyncEngine, AsyncSession
from syrupy import SnapshotAssertion
from syrupy.filters import props

from virtool.data.errors import ResourceConflictError, ResourceNotFoundError
from virtool.data.layer import DataLayer
from virtool.fake.next import DataFaker
from virtool.groups.models import GroupMinimal
from virtool.models.roles import AdministratorRole
from virtool.pg.utils import get_row_by_id
from virtool.users.oas import UpdateUserRequest
from virtool.users.pg import SQLUser


class TestCreate:
    async def test_ok(
        self,
        data_layer: DataLayer,
        snapshot_recent: SnapshotAssertion,
    ):
        """Test basic user creation with valid data."""
        user = await data_layer.users.create(
            handle="testuser",
            password="test_password123",
        )

        assert user == snapshot_recent(exclude=props("id"))
        assert user.force_reset is False
        assert user.active is True
        assert user.administrator_role is None

    async def test_already_exists(
        self,
        data_layer: DataLayer,
        fake: DataFaker,
    ):
        """Test that an error is raised when a user with the same handle already exists."""
        user = await fake.users.create()

        with pytest.raises(ResourceConflictError) as err:
            await data_layer.users.create(password="hello_world", handle=user.handle)

        assert "User already exists" in str(err.value)


class TestUpdate:
    async def test_groups(
        self,
        data_layer: DataLayer,
        fake: DataFaker,
        pg: AsyncEngine,
        snapshot_recent: SnapshotAssertion,
    ):
        """Test that updating `groups` works as expected."""
        user = await fake.users.create()

        group_1 = await fake.groups.create()
        group_2 = await fake.groups.create()
        group_3 = await fake.groups.create()

        # Set initial groups.
        obj = await data_layer.users.update(
            user.id,
            UpdateUserRequest(groups=[group_1.id, group_3.id]),
        )

        row = await get_row_by_id(pg, SQLUser, 1)

        assert obj == snapshot_recent(name="obj_1")
        assert row == snapshot_recent(name="pg_1", exclude=props("password"))

        # Update groups, removing one and adding another.
        obj = await data_layer.users.update(
            user.id,
            UpdateUserRequest(groups=[group_2.id, group_1.id]),
        )

        row = await get_row_by_id(pg, SQLUser, 1)

        assert obj == snapshot_recent(name="obj_2")
        assert row == snapshot_recent(name="pg_2", exclude=props("password"))

        # Remove all groups.
        obj = await data_layer.users.update(user.id, UpdateUserRequest(groups=[]))

        row = await get_row_by_id(pg, SQLUser, 1)

        assert obj == snapshot_recent(name="obj_3")
        assert row.to_dict() == snapshot_recent(name="pg_3", exclude=props("password"))

    async def test_groups_unset_primary(
        self,
        data_layer: DataLayer,
        fake: DataFaker,
        pg: AsyncEngine,
        snapshot_recent: SnapshotAssertion,
    ):
        """Test that the primary group is unset when the user is removed from the group."""
        group = await fake.groups.create()
        user = await fake.users.create(groups=[group], primary_group=group)

        assert user.primary_group == GroupMinimal.parse_obj(group)

        obj = await data_layer.users.update(
            user.id,
            UpdateUserRequest(groups=[]),
        )

        assert obj.primary_group is None

        row = await get_row_by_id(pg, SQLUser, 1)

        assert obj == snapshot_recent(name="obj")
        assert row.to_dict() == snapshot_recent(name="pg", exclude=props("password"))

    async def test_primary_group_when_member(
        self,
        data_layer: DataLayer,
        fake: DataFaker,
        pg: AsyncEngine,
        snapshot_recent: SnapshotAssertion,
    ):
        """Test that the primary group is updated when the user is already member of the group."""
        group = await fake.groups.create()
        user = await fake.users.create(groups=[group])

        obj = await data_layer.users.update(
            user.id,
            UpdateUserRequest(primary_group=group.id),
        )

        row = await get_row_by_id(pg, SQLUser, 1)

        assert obj == snapshot_recent(name="obj")
        assert obj.primary_group == GroupMinimal.parse_obj(group)
        assert row.to_dict() == snapshot_recent(name="pg", exclude=props("password"))

    async def test_primary_group_when_not_member(
        self,
        data_layer: DataLayer,
        fake: DataFaker,
    ):
        """Test that the call fails when the user is not a member of the primary group in
        the update.
        """
        group = await fake.groups.create()
        user = await fake.users.create()

        with pytest.raises(ResourceConflictError) as err:
            await data_layer.users.update(
                user.id,
                UpdateUserRequest(primary_group=group.id),
            )

        assert str(err.value) == "User is not a member of group"

    async def test_primary_group_does_not_exist(
        self,
        data_layer: DataLayer,
        fake: DataFaker,
    ):
        """Test that the call fails when the primary group does not exist."""
        user = await fake.users.create()

        with pytest.raises(ResourceConflictError) as err:
            await data_layer.users.update(
                user.id,
                UpdateUserRequest(primary_group=3),
            )

        assert str(err.value) == "User is not a member of group"

    async def test_primary_group_switching_between_groups(
        self,
        data_layer: DataLayer,
        fake: DataFaker,
        snapshot_recent: SnapshotAssertion,
    ):
        """Test switching primary group from one valid group to another."""
        group_1 = await fake.groups.create()
        group_2 = await fake.groups.create()
        user = await fake.users.create(groups=[group_1, group_2], primary_group=group_1)

        # Verify initial state
        assert user.primary_group.id == group_1.id

        # Switch primary group to group_2
        obj = await data_layer.users.update(
            user.id,
            UpdateUserRequest(primary_group=group_2.id),
        )

        assert obj == snapshot_recent
        assert obj.primary_group.id == group_2.id

    async def test_update_multiple_fields_together(
        self,
        data_layer: DataLayer,
        fake: DataFaker,
        snapshot_recent: SnapshotAssertion,
    ):
        """Test updating password, groups, and primary_group in same request."""
        group_1 = await fake.groups.create()
        group_2 = await fake.groups.create()
        group_3 = await fake.groups.create()
        user = await fake.users.create(groups=[group_1])

        # Update multiple fields at once
        obj = await data_layer.users.update(
            user.id,
            UpdateUserRequest(
                password="new_password123",
                groups=[group_2.id, group_3.id],
                primary_group=group_2.id,
                force_reset=True,
                active=False,
            ),
        )

        assert obj == snapshot_recent
        assert obj.primary_group.id == group_2.id
        assert obj.force_reset is True
        assert obj.active is False
        assert len(obj.groups) == 2

        # Verify the new password works
        assert await data_layer.users.validate_password(user.id, "new_password123")

    async def test_password(
        self,
        data_layer: DataLayer,
        fake: DataFaker,
        pg: AsyncEngine,
        snapshot_recent: SnapshotAssertion,
    ):
        """Test that updating the user's password works as expected."""
        group = await fake.groups.create()
        user = await fake.users.create(groups=[group])

        assert await data_layer.users.update(
            user.id,
            UpdateUserRequest(password="hello_world"),
        ) == snapshot_recent(name="obj")

        async with AsyncSession(pg) as session:
            row = await session.get(SQLUser, 1)

            assert row.to_dict() == snapshot_recent(
                name="pg",
                exclude=props("password"),
            )

        # Ensure the newly set password validates.
        assert await data_layer.users.validate_password(user.id, "hello_world")

    async def test_not_found(self, data_layer: DataLayer):
        with pytest.raises(ResourceNotFoundError):
            await data_layer.users.update(
                99999,
                UpdateUserRequest(groups=[]),
            )


class TestCheckUsersExist:
    async def test_no_users_exist(self, data_layer: DataLayer):
        """Verify that the user existence check returns False when no users exist."""
        assert not await data_layer.users.check_users_exist()

    async def test_users_exist(self, data_layer: DataLayer):
        """Verify that the user existence check returns True when users exist."""
        await data_layer.users.create(password="hello_world", handle="bill")
        assert await data_layer.users.check_users_exist()


class TestSetAdministratorRole:
    """Tests for the set_administrator_role method (interface tests)."""

    @pytest.mark.parametrize(
        "role",
        [AdministratorRole.BASE, AdministratorRole.USERS, AdministratorRole.FULL, None],
    )
    async def test_ok(
        self,
        role: AdministratorRole | None,
        data_layer: DataLayer,
        fake: DataFaker,
    ):
        """Test that set_administrator_role updates user roles correctly."""
        user = await fake.users.create()

        # Test setting the role
        updated_user = await data_layer.users.set_administrator_role(user.id, role)
        assert updated_user.administrator_role == role

        # Test persistence - retrieve the user again to verify role was stored
        retrieved_user = await data_layer.users.get(user.id)
        assert retrieved_user.administrator_role == role

    async def test_not_found(self, data_layer: DataLayer):
        """Test that set_administrator_role raises error for non-existent user."""
        with pytest.raises(ResourceNotFoundError):
            await data_layer.users.set_administrator_role(99999, AdministratorRole.BASE)

    async def test_invalid_role_raises(
        self,
        data_layer: DataLayer,
        fake: DataFaker,
    ):
        """Test that set_administrator_role rejects a role outside the valid set."""
        user = await fake.users.create()

        with pytest.raises(ResourceConflictError):
            await data_layer.users.set_administrator_role(user.id, "spaces")

    async def test_invalid_value_rejected(
        self,
        data_layer: DataLayer,
        engine: AsyncEngine,
        fake: DataFaker,
    ):
        """Test that the database rejects an administrator role outside the valid set."""
        user = await fake.users.create()

        with pytest.raises(IntegrityError):
            async with AsyncSession(engine) as session:
                await session.execute(
                    update(SQLUser)
                    .where(SQLUser.id == user.id)
                    .values(administrator_role="spaces"),
                )
                await session.commit()
