# serializer version: 1
# name: TestCreate.test_ok
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'testuser',
    'last_password_change': 'approximately_now_datetime',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_groups[obj_1]
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'haematologists',
      }),
      dict({
        'id': 3,
        'legacy_id': None,
        'name': 'meteorologists',
      }),
    ]),
    'handle': 'leeashley',
    'id': 1,
    'last_password_change': 'approximately_now_datetime',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_groups[obj_2]
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'geoscientists',
      }),
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'haematologists',
      }),
    ]),
    'handle': 'leeashley',
    'id': 1,
    'last_password_change': 'approximately_now_datetime',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_groups[obj_3]
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 1,
    'last_password_change': 'approximately_now_datetime',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_groups[pg_1]
  <SQLUser(id='1', active='True', administrator_role='None', email='', force_reset='False', handle='leeashley', last_password_change='datetime', legacy_id='None', settings='{'show_ids': True, 'show_versions': True, 'quick_analyze_workflow': 'pathoscope', 'skip_quick_analyze_dialog': True}', groups='[<SQLGroup(id=1, legacy_id=None, name=haematologists, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>, <SQLGroup(id=3, legacy_id=None, name=meteorologists, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>]', primary_group='None')>
# ---
# name: TestUpdate.test_groups[pg_2]
  <SQLUser(id='1', active='True', administrator_role='None', email='', force_reset='False', handle='leeashley', last_password_change='datetime', legacy_id='None', settings='{'show_ids': True, 'show_versions': True, 'quick_analyze_workflow': 'pathoscope', 'skip_quick_analyze_dialog': True}', groups='[<SQLGroup(id=2, legacy_id=None, name=geoscientists, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>, <SQLGroup(id=1, legacy_id=None, name=haematologists, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>]', primary_group='None')>
# ---
# name: TestUpdate.test_groups[pg_3]
  dict({
    'active': True,
    'administrator_role': None,
    'email': '',
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 1,
    'last_password_change': 'approximately_now_datetime',
    'legacy_id': None,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_groups_unset_primary[obj]
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 1,
    'last_password_change': 'approximately_now_datetime',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_groups_unset_primary[pg]
  dict({
    'active': True,
    'administrator_role': None,
    'email': '',
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 1,
    'last_password_change': 'approximately_now_datetime',
    'legacy_id': None,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_password[obj]
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'handle': 'leeashley',
    'id': 1,
    'last_password_change': 'approximately_now_datetime',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_password[pg]
  dict({
    'active': True,
    'administrator_role': None,
    'email': '',
    'force_reset': False,
    'groups': list([
      <SQLGroup(id=1, legacy_id=None, name=musicians, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>,
    ]),
    'handle': 'leeashley',
    'id': 1,
    'last_password_change': 'approximately_now_datetime',
    'legacy_id': None,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_primary_group_switching_between_groups
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'architects',
      }),
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'handle': 'lindawest',
    'id': 1,
    'last_password_change': 'approximately_now_datetime',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': dict({
      'id': 2,
      'legacy_id': None,
      'name': 'architects',
    }),
  })
# ---
# name: TestUpdate.test_primary_group_when_member[obj]
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'handle': 'leeashley',
    'id': 1,
    'last_password_change': 'approximately_now_datetime',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': dict({
      'id': 1,
      'legacy_id': None,
      'name': 'musicians',
    }),
  })
# ---
# name: TestUpdate.test_primary_group_when_member[pg]
  dict({
    'active': True,
    'administrator_role': None,
    'email': '',
    'force_reset': False,
    'groups': list([
      <SQLGroup(id=1, legacy_id=None, name=musicians, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>,
    ]),
    'handle': 'leeashley',
    'id': 1,
    'last_password_change': 'approximately_now_datetime',
    'legacy_id': None,
    'primary_group': <SQLGroup(id=1, legacy_id=None, name=musicians, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_update_multiple_fields_together
  dict({
    'active': False,
    'administrator_role': None,
    'force_reset': True,
    'groups': list([
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'architects',
      }),
      dict({
        'id': 3,
        'legacy_id': None,
        'name': 'ophthalmologists',
      }),
    ]),
    'handle': 'sallywalker',
    'id': 1,
    'last_password_change': 'approximately_now_datetime',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': dict({
      'id': 2,
      'legacy_id': None,
      'name': 'architects',
    }),
  })
# ---
